--- a/leaderboard.html
+++ b/leaderboard.html
@@ -10,7 +10,7 @@
 
 <template name="leaderboard">
   <div class="leaderboard">
-    <h1> Fit Feed</h1>
+    <h1> Friend Feed</h1>
     {{#each images}}
       <img src="{{url}}">
     {{/each}}
